# ROS2

./: README.md
AISR_ws/install/: local_setup.sh  setup.sh
AISR_ws/log/: latest_build
AISR_ws/src/xArm_sub/: package.xml  setup.cfg  setup.py
AISR_ws/src/xarm_sub/: package.xml  setup.cfg  setup.py
ROS2_serial/install/: local_setup.sh  setup.sh
ROS2_serial/log/: latest_build
dev_ws/install/: local_setup.sh  setup.sh
dev_ws/log/: latest_build
dev_ws/src/cpp_pubsub/: CMakeLists.txt  (+1 more)
env_deploy/: ReadMe.md  set-apt-sourcelist.sh  ubuntu1804-docker-install.sh  ubuntu1804-ros-install.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
ws_ros2_copy/install/: local_setup.sh  setup.sh
ws_ros2_copy/log/: latest_build
ws_ros2_moveit2/: AISR Calligraphy using MoveIt.md  README.md
ws_ros2_moveit2/src/moveit2/moveit_demo_nodes/run_move_group/: CMakeLists.txt  README.md  package.xml
ws_ros2_moveit2/src/moveit2/moveit_demo_nodes/run_move_group/config/: controllers.yaml  panda_controllers.yaml  start_positions.yaml
ws_ros2_moveit2/src/moveit2/moveit_demo_nodes/run_move_group/launch/: run_move_group.launch.py  run_move_group.rviz  run_move_group_interface.launch.py
ws_ros2_moveit2/src/moveit2/moveit_demo_nodes/run_move_group/scripts/: arm_control.py  arm_control_by_reading_files.py  arm_control_by_subscription.py  calligraphy_node.py  calligraphy_pub.py  joint_position.txt  write_point.txt
ws_ros2_moveit2/src/moveit2/moveit_demo_nodes/run_move_group/src/: calligraphy_sub.cpp  robot_arm_ik.cpp  run_move_group.cpp  run_move_group_origin.cpp
(+1367 files in other folders)
